# libqrencode-wrapper

./: .gitmodules  .travis.yml  CMakeLists.txt  READMD.md
example/: CMakeLists.txt  example.cpp
src/: CMakeLists.txt  qrencode_wrapper.cpp  qrencode_wrapper.h
unit/: ut.cpp
ut/: CMakeLists.txt  ut.cpp
